--- a/Analise_dados.ipynb
+++ b/Analise_dados.ipynb
@@ -18,25 +18,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Função que plota o gráfico de dispersão\n",
+    "\"\"\"\n",
     "def plot_particao(dados, particao, func):\n",
     "    qtd_clusters = 0\n",
-    "    for obj in particao:\n",
-    "        if(obj[1] > qtd_clusters):\n",
+    "    for obj in particao: #Percorre todos os clusters\n",
+    "        if(obj[1] > qtd_clusters): #Verifica e guarda o maior cluster\n",
     "            qtd_clusters = int(obj[1])\n",
-    "    x = []\n",
-    "    y = []\n",
-    "    for i in range(0, qtd_clusters + 1):\n",
+    "    x = [] #inicializa vetor de coordenadas \n",
+    "    y = [] ##\n",
+    "    for i in range(0, qtd_clusters + 1):#Inicializa um o\n",
     "        x.append([])\n",
     "        y.append([])\n",
     "\n",
-    "    for obj in particao:\n",
-    "        for j in dados:\n",
+    "    for obj in particao: #Percorre todos os clusters\n",
+    "        for j in dados:#Encontra as coordenadas no objeto de dados\n",
     "            if(j[0] == obj[0]):\n",
-    "                cord = [j[1],j[2]]\n",
+    "                cord = [j[1],j[2]] #guarda a coordenada\n",
     "        x[int(obj[1])].append(cord[0])\n",
     "        y[int(obj[1])].append(cord[1])\n",
     "    \n",
-    "    for i in range(0, qtd_clusters + 1):\n",
+    "    for i in range(0, qtd_clusters + 1): #plota os graficos\n",
     "        func.scatter(x[i],y[i])"
    ]
   },
@@ -354,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
